--- a/TimeReg/app/src/main/AndroidManifest.xml
+++ b/TimeReg/app/src/main/AndroidManifest.xml
@@ -27,6 +27,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="timereg.roninit.dk.timereg.MainActivity" />
         </activity>
+        <activity
+            android:name=".InfoActivity"
+            android:label="@string/title_activity_info"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="timereg.roninit.dk.timereg.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
