Test notification tilføjet

--- a/TimeReg/app/src/main/AndroidManifest.xml
+++ b/TimeReg/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="timereg.roninit.dk.timereg.MainActivity" />
         </activity>
+        <activity android:name=".CreateNotificationActivity"></activity>
     </application>
 
 </manifest>
