--- a/TimeReg/app/build.gradle
+++ b/TimeReg/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "timereg.roninit.dk.timereg"
+        applicationId "rest.hello.org.rest2"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
         release {
