--- a/TimeReg/app/build.gradle
+++ b/TimeReg/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "rest.hello.org.rest2"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 10
-        versionName "1.10"
+        versionCode 13
+        versionName "1.13"
     }
     buildTypes {
         release {
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.1'
 
 
+    androidTestCompile 'junit:junit:4.12'
 }
