--- a/TimeReg/app/build.gradle
+++ b/TimeReg/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "rest.hello.org.rest2"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 13
-        versionName "1.13"
+        versionCode 18
+        versionName "1.18"
     }
     buildTypes {
         release {
@@ -36,6 +36,8 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.4.1'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.1'
+    compile 'joda-time:joda-time:2.9.3'
+    compile 'com.github.pinball83:masked-edittext:1.0.3'
 
 
     androidTestCompile 'junit:junit:4.12'
